--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -1,12 +1,12 @@
 # Mission // #001
-## Bug-Hunt
+## Anti-Cascade Brigade
 # Goals
-- Stabilize the situation around Evergreen.
-- Track the raiders, figure out who they are.
-  - Stop their attacks.
+- Investigate the Redhawk Research Facility on Alviss.
+- Report back to the station and secure the area.
+  - Retreat if a substantial threat is encountered.
 
 # Stakes
-- Time is critical. Not acting will result in Evergreen losing contact with surrounding farmland, crippling any kind of expansion.
+- Time is critical. If the facility is not cycling its NHP, it could cascade and bring untold destruction.
 
 # Reserves
 - None at this time.
